# cmake_git_version

./: .travis.yml  CMakeLists.txt  README.md  apple.hpp  fruit.hpp  fruit_factory.cpp  fruit_factory.hpp  main.cpp  orange.hpp  wrong_init1.cpp
cmake/modules/: git_ver.cmake
